Fixed layout issues with review and curriculum modals

--- a/css/style.css
+++ b/css/style.css
@@ -362,19 +362,6 @@ nav a:nth-last-child(2) {
     margin-right: 0;
 }
 
-#curriculum .section {
-    margin-bottom: 1em;
-}
-
-#curriculum .section:last-child {
-    margin-bottom: 0;
-}
-
-#curriculum .section h2 {
-    font-size: 0.813em;
-    color: rgba(16, 16, 16, 0.7);
-}
-
 #enroll {
     text-align: center;
     margin: 1em auto;
@@ -483,16 +470,20 @@ footer {
 /* MODAL */
 
 #overlay {
-    background: rgba(24, 157, 173, 0.8);
+    background: rgba(24, 157, 173, 0.85);
     position: absolute;
     top: 0;
     right: 0;
     left: 0;
     bottom: 0;
     z-index: 3;
-    -webkit-backdrop-filter: blur(2px);
-    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
     height: 100%;
+}
+
+#overlay.fixed {
+    position: fixed;
 }
 
 #modal {
@@ -509,11 +500,49 @@ footer {
     transform: translate3d(0, 0, 0);
     z-index: 2;
     text-align: center;
+    color: rgba(16, 16, 16, 1);
 }
 
 #modal iframe {
     width: 100%;
     height: 100%;
+}
+
+#modal.info, #modal.info-lg {
+    text-align: left;
+    padding: 1em;
+    background: #fff;
+    color: '#101010';
+    overflow: scroll;
+    height: 80%;
+    width: 40%;
+    border-radius: 3px;
+}
+
+#modal.info-lg {
+    width: 90%;
+    height: 80%;
+}
+
+#modal .section {
+    margin-bottom: 1em;
+}
+
+#modal .section:last-child {
+    margin-bottom: 0;
+}
+
+#modal h1 {
+    color: #189dad;
+}
+
+#modal .section h2 {
+    font-size: 0.813em;
+    color: rgba(16, 16, 16, 0.7);
+}
+
+#modal p {
+    font-size: 0.875em;
 }
 
 /* ICONS */
@@ -861,6 +890,10 @@ footer {
     #modal {
         width: 90%;
         height: 45%;
+    }
+    #modal.info {
+        width: 90%;
+        height: 75%;
     }
 }
 
